--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -5,7 +5,7 @@
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
   "appId": "YourAppID",
   "asar": true,
-  "productName": "铁柱工具箱",
+  "productName": "铁柱工具箱(沧溟版)",
   "directories": {
     "output": "release/${version}"
   },
